# oneroof

./: .envrc  .gitattributes  .gitignore  .nextflow.log.1  .nextflow.log.2  .nextflow.log.3  .nextflow.log.4  .nextflow.log.5  .nextflow.log.6  .nextflow.log.7  .nextflow.log.8  .nextflow.log.9  .nojekyll  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Containerfile  Dockerfile  LICENSE  README.md  _quarto.yml  data_manifest.yml  flake.nix  index.html  justfile  llms.txt  main.nf  nextflow.config  nf-test.config  pyproject.toml  refman.toml  robots.txt  search.json  sequence.gb  sitemap.xml  test.txt
.github/workflows/: docker-image.yaml  docs.yml  release.yml  test.yml
assets/: multiqc_config.yaml
conf/: file_watcher.template.yml  illumina.config  multiqc_config.yaml  nanopore.config  reporting.config  snpeff.config
conf/illumina_tests/: illumina_bad_primer_input.config  illumina_decontaminate_test.config  illumina_input_bad.config  illumina_missing_fastq.config  illumina_with_metagenomics.config  illumina_with_phylo_test.config  illumina_with_primers_test.config  illumina_without_primers_test.config
conf/nanopore_tests/: nanopore_bad_primers.config  nanopore_no_input_data.config  nanopore_with_haplotyping.config  nanopore_with_metagenomics.config  nanopore_with_phylo_test.config  nanopore_with_primers_test.config  nanopore_without_primers_test.config
conf/presets/: sarscov2.config  virus.config
config/: nanopore.config
docs/: base_and_variant_call.qmd  base_and_variant_call_on_chtc.qmd  data_management.html  data_management.md  data_management.qmd  developer.html  developer.md  developer.qmd  fix-index-paths.lua  fix-index-paths.py  index.html  index.md  index.qmd  main.qmd  pipeline_architecture.html  pipeline_architecture.md  pipeline_architecture.qmd  reporting.html  reporting.md  reporting.qmd  whats-that-file.html  whats-that-file.md  whats-that-file.qmd
globus/: .gitignore  README.md
globus/action_provider/: oneroof_action_provider.py  requirements.txt
globus/config/: .env.template  action_provider_config.json
globus/flows/: oneroof_flow.json
globus/scripts/: deploy.sh  register_flow.py  test_flow.py
lib/: Utils.groovy  countAmplicons.groovy  test_alignment_extractor.py  test_amplicon_efficiency.py  test_consensus_extractor.py  test_coverage_extractor.py  test_haplotyping_extractor.py  test_metagenomics_extractor.py  test_multiqc.py  test_qc_dashboard.py  test_variant_visualization.py  test_variants_extractor.py
lib/oneroof_cli/: app.py  utils.py
lib/oneroof_cli/commands/: resume.py  run.py  validate.py
lib/reporting/: __init__.py  multiqc.py  schema.py
lib/reporting/extractors/: __init__.py  alignment.py  consensus.py  coverage.py  haplotyping.py  metagenomics.py  variants.py
lib/reporting/visualizations/: __init__.py  amplicon_efficiency.py  coverage_heatmap.py  qc_dashboard.py  utils.py  variant_summary.py
modules/: amplicon-tk.nf  amplicon_reads.nf  basecall.nf  bbmap.nf  bcftools.nf  bedtools.nf  call_slack_alert.nf  chopper.nf  concat_consensus.nf  cramino.nf  cutadapt.nf  deacon.nf  dechat.nf  deduplication.nf  devider.nf  dorado.nf  duckdb.nf  fastp.nf  fastqc.nf  file_watcher.nf  find_amplicons.nf  find_and_trim_amplicons.nf  get_primer_seqs.nf  grepq.nf  ivar.nf  minimap2.nf  mosdepth.nf  mosepth.nf  multiqc.nf  nextclade.nf  output_primer_tsv.nf  plot_coverage.nf  pod5_watcher.nf  prepare_primers.nf  primer_patterns.nf  racon.nf  rasusa.nf  read_primer_tsv.nf  reference.nf  rename.nf  (+12 more)
schemas/v0.1.0-alpha/: CHANGELOG.md  oneroof_report.schema.json
site_libs/bootstrap/: bootstrap-327d2e26a581f0b1b9a8228e6ff8dd4d.min.css  bootstrap-562cca3a656d70e2385137d3cb68192c.min.css  bootstrap-607b5d4bf0d9ccf835222adaa06ef2d2.min.css  bootstrap-c724985897cbb77aa37d9512c05dcb36.min.css  bootstrap-c855f493001cbb46c825739426d62359.min.css  bootstrap-dark-45ad284df474b1259ed587dca9dcbcdb.min.css  bootstrap-dark-473ecdaa761c994b9b9c3cc583741e93.min.css  bootstrap-dark-53cd05bddfa53fa033b9005477c76c76.min.css  bootstrap-dark-94c481f422580588c6ef056a498f1c24.min.css  bootstrap-dark-ff88b72aec5de97f80a77f68f819e922.min.css
subworkflows/: alignment.nf  consensus_calling.nf  decontaminate.nf  dorado.nf  error_correction.nf  gather_data.nf  gather_illumina.nf  gather_nanopore.nf  haplotyping.nf  illumina_correction.nf  metagenomics.nf  nanopore_correction.nf  phylo.nf  primer_handling.nf  quality_control.nf  slack_alert.nf  variant_calling.nf
tests/: README.md
tests/data/: 18-Gut-sample-16_S18_L001.annotated.vcf  18-Gut-sample-16_S18_L001.tsv  18-Gut-sample-16_S18_L001_variant_effects.tsv  README.md  README_primer_tests.md  bad_bedfile.bed  bad_primer.tsv  empty_alignment.bam  primer_bed_haplo.bed  refseq_haplo.fasta  run_primer_tests.py  sample_barcode_mapping.csv  test_alignment.bam  test_alignment.bam.bai  test_illumina_R1.fastq  test_illumina_R2.fastq  test_make_primer_patterns.py  test_metagenome.fasta  test_multisample_plot.py  test_nanopore.fastq  test_plot_coverage.py  test_primers.bed  test_primers_multisegment.bed  test_reference.fasta  test_reference.gbk  test_reference_multisegment.fasta  test_resplice_primers.py  test_split_primer_combos.py  test_sylph.db  test_validate_primer_bed.py
tests/data/nanopore_reads/: SQK-NBD114-96_barcode01.bam  SQK-NBD114-96_barcode01.bam.bai
tests/data/test_pod5/: README.md
tests/modules/: ivar_consensus.nf.test  ivar_variants.nf.test  minimap2_align.nf.test
tests/output/reference_assets/: test_reference.gbk
tests/pipelines/: main.nf.test
tests/workflows/: illumina.nf.test  nanopore.nf.test
workflows/: illumina.nf  nanopore.nf
