[project]
name = "oneroof"
version = "1.0.0"
description = "Base-, Variant-, and Consensus-calling under One Proverbial Roof. Work in progress!"
authors = [
    { name = "Nicholas R. Minor", email = "nrminor@wisc.edu" },
    { name = "Annabelle Kalweit", email = "akalweit@wisc.edu" },
    { name = "Andrew J. Lail", email = "ajlail@wisc.edu" },
    { name = "William K. Gardner", email = "wkgardner@wisc.edu" }
]
requires-python = ">= 3.10"
keywords = [
    "science",
    "biology",
    "research",
    "bioinformatics",
    "sequencing",
    "genomics",
    "virus",
    "SARS-CoV-2",
    "H5N1",
    "influenza",
    "haplotyping",
]
classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "polars-lts-cpu[numpy,pandas,pyarrow,pydantic,calamine,openpyxl,xlsx2csv,xlsxwriter,async,graph,plot,style,timezone]>=1.17.1",
    "xlsxwriter>=3.2.0",
    "xlsx2csv>=0.8.4",
    "biopython>=1.84",
    "pysam>=0.22.1",
    "scipy>=1.14.1",
    "paramiko>=3.5.0",
    "plotnine>=0.14.4",
    "loguru>=0.7.0",
    "edlib>=1.3.9.post1",
    "lxml>=5.3.0",
    "pyyaml",
]

[build-system]
requires = ["setuptools >= 40.8.0", "cffi >=1.15.0,!=1.17.0"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.setuptools]
py-modules = ["bin"]

[project.scripts]
"oneroof" = "bin.__main__:main"

[tool.pixi.project]
channels = ["conda-forge", "bioconda", "anaconda"]
platforms = ["osx-64", "linux-64"]

[tool.pixi.pypi-dependencies]
oneroof = { path = ".", editable = true }

[tool.pixi.dependencies]
samtools = ">=1.5,<2"
nextflow = ">=24.4.2,<24.5"
minimap2 = ">=2.28,<3"
fastqc = ">=0.12.1,<0.13"
multiqc = ">=1.19,<2"
bcftools = ">=1.16,<2"
chopper = ">=0.8.0,<0.9"
seqkit = ">=2.8.2,<2.9"
snpeff = ">=5.2,<6"
vsearch = ">=2.28.1,<2.29"
nextclade = ">=3.7.1,<3.8"
cutadapt = ">=4.8,<5"
ivar = ">=1.4.2,<1.5"
seqfu = ">=1.20.3,<1.21"
rasusa = ">=2.0.0,<2.1"
mosdepth = ">=0.3.8,<0.4"
csvtk = { version = ">=0.30.0,<0.31", channel = "bioconda"}
snpsift = ">=5.2,<6"
bbmap = ">=39.1,<40"
bedtools = ">=2.31.1,<3"
devider = ">=0.0.1,<0.0.2"
deacon = ">=0.2.0,<0.3"
sylph = ">=0.8.1,<0.9"
sylph-tax = ">=1.2.0,<2"
fastp = ">=0.24.0,<0.25"

[tool.uv]
dev-dependencies = [
    "basedpyright>=1.21.0",
    "ipykernel>=6.29.5",
    "ipython>=8.12.3",
    "jupyter>=0.6.4",
    "just>=0.8.162",
    "mamba>=0.11.3",
    "marimo[sql]>=0.9.10",
    "pip>=24.2",
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
    "quarto>=0.1.0",
    "ruff>=0.9.6",
    "tox>=4.18.1",
    "ty>=0.0.0a8",
]
compile-bytecode = true

[tool.basedpyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
